# card-router

./: .coverageignore  .gitignore  COPYRIGHT  Cargo.toml  Justfile  LICENSE  README.md  References.md  docker-compose.yml  lithic-openapi.json
.cargo/: config.toml
.github/workflows/: ci.yml
configuration/: application-dev.yaml  application-local.yaml  application-test.yaml
docker/migration/: Dockerfile
docker/service/: Dockerfile
migrations/2023-11-21-173247_create_user/: up.sql
migrations/2023-11-22-043612_create_wallet/: up.sql
migrations/2023-11-22-174722_create_credit_card_type/: down.sql  up.sql
migrations/2023-11-25-211156_add_base_cards/: down.sql  up.sql
migrations/2023-11-25-212627_add_card_to_wallet/: down.sql  up.sql
migrations/2023-11-25-213852_add_category/: down.sql  up.sql
migrations/2023-11-25-221242_add_passthrough/: down.sql  up.sql
migrations/2023-11-26-194438_add_rule_engine/: down.sql  up.sql
migrations/2023-12-04-200843_add_wallet_attempt/: down.sql  up.sql
migrations/2023-12-04-201816_modify_wallet/: down.sql  up.sql
migrations/2024-02-16-194307_create_ledger/: down.sql  up.sql
migrations/2024-03-04-202712_add_base_categories/: down.sql  up.sql
migrations/2024-03-04-204259_add_sapphire_reserve_rules/: down.sql  up.sql
migrations/2024-03-04-214832_add_sapphire_preferred_rules/: down.sql  up.sql
migrations/2024-03-04-224925_add_bilt_rules/: down.sql  up.sql
migrations/2024-03-06-045716_add_rule_index/: down.sql  up.sql
migrations/2024-03-08-192406_add_footprint_vault_to_user/: down.sql  up.sql
migrations/2024-03-19-023741_update_wallet_attempt/: down.sql  up.sql
migrations/2024-03-24-183335_sync_pkey_sequences/: up.sql
migrations/2024-03-25-154534_unique_wallet_attempt/: down.sql  up.sql
migrations/2024-05-14-151758_pause_wallet_cards/: down.sql  up.sql
migrations/2024-05-17-223641_rule_id_on_transactions/: down.sql  up.sql
migrations/2024-05-28-192223_recreate_proper_ledger/: down.sql  up.sql
migrations/2024-06-12-004410_add_public_id_to_wallet_and_successful_end_to_end/: down.sql  up.sql
monitoring/: money_movement_equal.sql  pending_passthrough_card_balance.sql  pending_wallet_balance.sql
src/: api_error.rs  constant.rs  data_error.rs  environment.rs  error_type.rs  main.rs  schema.rs  service_error.rs  test.rs  test_helper.rs
src/adyen/checkout/: error.rs  from_client_errors.rs  mod.rs  service.rs
src/adyen_service/checkout/: constant.rs  error.rs  mod.rs  request.rs  response.rs  service.rs
src/asa/: mod.rs  request.rs  response.rs  tests.rs
src/asa_request/: entity.rs
src/auth/: config.rs  constant.rs  controller.rs  entity.rs  error.rs  jwt.rs  mod.rs  request.rs  response.rs  tests.rs
src/category/: constant.rs  dao.rs  entity.rs  error.rs  mod.rs  model.rs  service.rs
src/charge/: constant.rs  constant_tests.rs  dao.rs  dao_tests.rs  engine.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  model.rs  service.rs  tests.rs
src/charge_engine/: engine.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  tests.rs
src/common/: model.rs
src/configuration/: adyen.rs  application.rs  auth0.rs  configuration.rs  database.rs  environment.rs  footprint.rs  lithic.rs  mod.rs  otel.rs  redis.rs
src/credit_card_type/: config.rs  constant.rs  controller.rs  dao.rs  dao_tests.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  model.rs  response.rs  service.rs  typedef.rs
src/error/: api_error.rs  data_error.rs  mod.rs  service_error.rs
src/footprint/: constant.rs  constant_tests.rs  enum.rs  enum_tests.rs  error.rs  from_client_error.rs  helper.rs  helper_tests.rs  mod.rs  request.rs  response.rs  service.rs  tests.rs
src/footprint_service/: constant.rs  enum.rs  enum_tests.rs  helper.rs  helper_tests.rs  mod.rs  request.rs  service.rs
src/ledger/: constant.rs  constant_tests.rs  dao.rs  dao_tests.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  model.rs  service.rs  tests.rs
src/lithic/: error.rs  from_client_error.rs  from_lithic_error.rs  mod.rs  service.rs
src/lithic_service/: error.rs  mod.rs  service.rs
src/middleware/: auth.rs  claims.rs  cors.rs  mod.rs  security_headers.rs  services.rs
src/otel/: otel.rs
src/pagination/: constant.rs  error.rs  mod.rs  model.rs  request.rs  response.rs  service.rs  type.rs
src/passthrough_card/: config.rs  constant.rs  constant_tests.rs  controller.rs  convert.rs  crypto.rs  dao.rs  dao_tests.rs  engine.rs  entitiy_tests.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  model.rs  request.rs  response.rs  service.rs  tests.rs
src/redis/: client.rs  error.rs  helper.rs  key.rs  mod.rs  services.rs
src/rule/: constant.rs  constant_tests.rs  dao.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  request.rs  service.rs  tests.rs
src/rule_engine/: constant.rs  dao.rs  engine.rs  entity.rs  entity_tests.rs  mod.rs  request.rs  tests.rs
src/test_helper/: charge.rs  constant.rs  credit_card.rs  error.rs  general.rs  ledger.rs  mod.rs  passthrough_card.rs  redis.rs  rule.rs  user.rs  wallet.rs
src/transaction/: constant.rs  dao.rs  engine.rs  entity.rs  entity_tests.rs  error.rs  mod.rs
src/user/: config.rs  controller.rs  dao.rs  entity.rs  entity_tests.rs  error.rs  find_from_auth_middleware_only.rs  mod.rs  model.rs  request.rs  response.rs  service.rs  tests.rs
src/user_transaction/: config.rs  controller.rs  dao.rs  entity.rs  error.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
src/util/: api_call.rs  date.rs  db.rs  error.rs  math.rs  mod.rs  specialized.rs  transaction.rs
src/wallet/: config.rs  constant.rs  constant_tests.rs  controller.rs  converter.rs  dao.rs  engine.rs  entity.rs  entity_tests.rs  error.rs  mod.rs  model.rs  request.rs  response.rs  service.rs  tests.rs
src/webhooks/: adyen_handler.rs  adyen_handler_tests.rs  config.rs  controller.rs  error.rs  lithic_handler.rs  lithic_handler_tests.rs  mod.rs  tests.rs
