[package]
name = "card_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", features = ["serde"] }
serde = {version = "1.0.175", features = ["derive"]}
serde_with = { version = "3.1.0"}
serde_json = "1.0.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
diesel_migrations = "2.1.0"
log = "0.4.20"
adyen-payment = { version = "68.0.0", path = "../adyen-openapi/clients/payment" }
adyen-checkout = { version = "71.0.0", path = "../adyen-openapi/clients/checkout" }
futures = "0.3.29"
adyen-webhooks = { version = "1.0.0", path = "../adyen-openapi/clients/webhooks" }
mockall = "0.12.0"
lithic_client = { version = "1.0.0", path = "../lithic-openapi/clients/lithic" }
base64 = "0.21.5"
actix-web-httpauth = "0.8.1"
reqwest = "0.11.22"
jsonwebtoken = "9.2.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "full", "tracing"] }
console-subscriber = "0.2.0"
async-trait = { version = "0.1.77", features = [] }
rsa = "0.9.6"
openssl = "0.10.64"
rand = "0.8.5"

