[package]
name = "card_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = {version = "1.0.175", features = ["derive"]}
serde_with = { version = "3.1.0"}
serde_json = "1.0.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
env_logger = "0.10.0"
futures-util = "0.3.28"
lazy_static = "1.4.0"
diesel_migrations = "2.1.0"
log = "0.4.20"
adyen-checkout = { version = "71.0.0", path = "../adyen-openapi/clients/checkout" }
adyen-webhooks = { version = "1.0.0", path = "../adyen-openapi/clients/webhooks" }
footprint = { version = "1.0.0", path = "../footprint-openapi/clients/footprint" }
mockall = "0.12.0"
lithic_client = { version = "1.0.0", path = "../lithic-openapi/clients/lithic" }
base64 = "0.21.5"
actix-web-httpauth = "0.8.1"
reqwest = "0.11.22"
jsonwebtoken = "9.2.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "full", "tracing", "sync"] }
console-subscriber = "0.2.0"
async-trait = { version = "0.1.77", features = [] }
openssl = "0.10.64"
rand = "0.8.5"
diesel-async = { version = "0.4.1", features = ["postgres", "async-connection-wrapper", "bb8"] }
uuidv7 = "=0.1.3"
bb8 = "0.8.3"
derive_more = "0.99.17"
awc = { version = "3.4.0" , features = ["rustls"]}
actix-cors = "0.7.0"
rustls = "0.17.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.6"
tracing-error = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "tls-roots"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
opentelemetry = "0.22.0"
tonic = "0.11.0"
quote = "1.0.35"
syn = "2.0.53"


